--- a/DAM-vibe-front-main/styles.css
+++ b/DAM-vibe-front-main/styles.css
@@ -15,6 +15,14 @@ body {
   padding: 20px;
 }
 
+/* para items */
+.tile-has-item {
+  border: 2px solid gold;
+  box-shadow: 0 0 8px 2px gold;
+  font-size: 1.5rem;
+  z-index: 2;
+}
+
 .game-container {
   display: grid;
   grid-template-columns: 300px 1fr;
